--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <a href="" class="link ms-4 d-none">See My Work</a>
         </div>
         <div class="col-10 col-md-4 d-none d-md-block">
-          <img src="C:\Users\sravy\OneDrive\Pictures\sravya.jpg" class="img-fluid" alt="" />
+          <img src="C:\Users\sravy\OneDrive\Desktop\sasi\sravya.jpg" class="img-fluid" alt="" />
         </div>
       </div>
     </section>
@@ -171,7 +171,7 @@
         <div class="row justify-content-evenly px-4">
           <div class="post col-md-4 webapp all col-10 mt-3 mt-md-0" data-aos="fade-up">
             <div class="card">
-              <img src="C:\Users\sravy\OneDrive\Pictures\Screenshots\Screenshot 2023-10-20 234628.png" class="card-img-top" alt="..." />
+              <img src="C:\Users\sravy\OneDrive\Desktop\sasi\Screenshot 2023-10-20 234628.png" class="card-img-top" alt="..." />
               <div class="card-body text-center">
                 <h4 class="card-title">Health And Nutrition</h4>
                 <span class="badge bg-secondary badge-pill">HTML&CSS</span>
@@ -186,7 +186,7 @@
 
           <div class="post col-md-4 wedsite all col-10 mt-3 mt-md-0" data-aos="fade-up">
             <div class="card">
-              <img src="C:\Users\sravy\OneDrive\Pictures\Screenshots\Screenshot 2024-03-27 205959.png" class="card-img-top" alt="..." />
+              <img src="C:\Users\sravy\OneDrive\Desktop\sasi\Screenshot 2024-03-27 205959.png" class="card-img-top" alt="..." />
               <div class="card-body text-center">
                 <h4 class="card-title">Blood Donation Prediction</h4>
                 <span class="badge bg-secondary badge-pill">HTML&CSS, Machine learning</span>
